Add Error Handling framework
