# internal/docs/swagger.json
@@ -73,6 +73,12 @@
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -147,6 +153,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
@@ -593,6 +605,12 @@
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -626,6 +644,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
@@ -870,6 +894,12 @@
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -922,6 +952,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
@@ -1010,6 +1046,12 @@
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1062,6 +1104,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
@@ -1296,6 +1344,12 @@
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1466,12 +1520,6 @@
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
-                        }
-                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -1524,12 +1572,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
@@ -1658,6 +1700,18 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/github_com_Jiruu246_rms_pkg_utils.APIResponse-any"
                         }
